--- a/index.html
+++ b/index.html
@@ -44,10 +44,20 @@
         <!-- <div class="header-contact-list"> -->
         <ul class="header-list list header-contact-list">
           <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="link header-contact">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link header-contact">
+              <svg class="tel-svg" width="16" height="12">
+                <use href="./imeges/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contact-item">
-            <a href="tel:+380961111111" class="link header-contact">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-contact">
+              <svg class="tel-svg" width="10" height="16">
+                <use href="./imeges/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
         <!-- </div> -->
@@ -68,24 +78,44 @@
           <h2 class="section-title visually-hidden">Принципы работы</h2>
           <ul class="list">
             <li class="principles-item">
+              <div class="principles-icon-box">
+                <svg width="70" height="70">
+                  <use href="./imeges/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="secondary-title">Внимание к деталям</h3>
               <p class="section-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="principles-item">
+              <div class="principles-icon-box">
+                <svg width="70" height="70">
+                  <use href="./imeges/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="secondary-title">Пунктуальность</h3>
               <p class="section-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="principles-item">
+              <div class="principles-icon-box">
+                <svg width="70" height="70">
+                  <use href="./imeges/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="secondary-title">Планирование</h3>
               <p class="section-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="principles-item">
+              <div class="principles-icon-box">
+                <svg width="70" height="70">
+                  <use href="./imeges/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="secondary-title">Современные технологии</h3>
               <p class="section-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -126,6 +156,20 @@
               <div class="team-text">
                 <h3 class="secondary-title">Игорь Демьяненко</h3>
                 <p class="section-text">Product Designer</p>
+              </div>
+              <div class="social-wrap">
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
