--- a/index.html
+++ b/index.html
@@ -166,9 +166,27 @@
                       </svg>
                     </a>
                   </li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -177,6 +195,38 @@
               <div class="team-text">
                 <h3 class="secondary-title">Ольга Репина</h3>
                 <p class="section-text">Frontend Developer</p>
+              </div>
+              <div class="social-wrap">
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -190,6 +240,38 @@
                 <h3 class="secondary-title">Николай Тарасов</h3>
                 <p class="section-text">Marketing</p>
               </div>
+              <div class="social-wrap">
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -202,14 +284,107 @@
                 <h3 class="secondary-title">Михаил Ермаков</h3>
                 <p class="section-text">UI Designer</p>
               </div>
+              <div class="social-wrap">
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="svg-social" width="20" height="20">
+                        <use href="./imeges/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
+
+      <!-- Постоянные клиенты -->
+
+      <section class="clients">
+        <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h3>
+          <ul class="clients-list list">
+            <li class="clients-item">
+            <a href="" class="link clients-link">
+              <svg class="clients-icon" width="106" height="60">
+                <use href='./imeges/icons.svg#icon-logo1'></use>
+
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="link clients-link">
+              <svg class="clients-icon" width="106" height="60">
+                <use href='./imeges/icons.svg#icon-logo2'></use>
+
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="link clients-link">
+              <svg class="clients-icon" width="106" height="60">
+                <use href='./imeges/icons.svg#icon-logo3'></use>
+
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="link clients-link">
+              <svg class="clients-icon" width="106" height="60">
+                <use href='./imeges/icons.svg#icon-logo4'></use>
+
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="link clients-link">
+              <svg class="clients-icon" width="106" height="60">
+                <use href='./imeges/icons.svg#icon-logo5'></use>
+
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="link clients-link">
+              <svg class="clients-icon" width="106" height="60">
+                <use href='./imeges/icons.svg#icon-logo6'></use>
+
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+        </section>
     </main>
+
+
     <!--Футер-->
     <footer class="footer">
       <div class="container">
+        <div>
         <a href="" class="footer-logo link"><span class="header-web">Web</span>Studio</a>
         <address class="footer-address">
           <ul class="list">
@@ -230,6 +405,44 @@
             </li>
           </ul>
         </address>
+        </div>
+        <div class="footer-social">
+          <h3 class="secondary-title">присоединяйтесь</h3>
+          <ul class="list footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20" >
+                  <use href="./imeges/icons.svg#icon-instagram">
+                  </use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20" >
+                  <use href="./imeges/icons.svg#icon-instagram">
+                  </use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20" >
+                  <use href="./imeges/icons.svg#icon-instagram">
+                  </use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20" >
+                  <use href="./imeges/icons.svg#icon-instagram">
+                  </use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
