--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,7 @@
     <header class="header">
       <div class="container">
         <nav class="header-nav">
-          <a href="./index.html" class="header-logo link"
-            ><span class="header-web">Web</span>Studio</a
-          >
+          <a href="" class="header-logo link"><span class="header-web">Web</span>Studio</a>
           <ul class="list header-list">
             <li class="header-item">
               <a href="./index.html" class="link header-link">Студия</a>
@@ -36,10 +34,20 @@
         <!-- <div class="header-contact-list"> -->
         <ul class="header-list list header-contact-list">
           <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="link header-contact">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link header-contact">
+              <svg class="tel-svg" width="16" height="12">
+                <use href="./imeges/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contact-item">
-            <a href="tel:+380961111111" class="link header-contact">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-contact">
+              <svg class="tel-svg" width="10" height="16">
+                <use href="./imeges/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
         <!-- </div> -->
@@ -146,26 +154,61 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="" class="footer-logo link"><span class="header-web">Web</span>Studio</a>
-        <address class="footer-address">
-          <ul class="list">
-            <li class="footer-item">
-              <a
-                class="link footer-address"
-                href="https://goo.gl/maps/mXZvtL3YNKknpCyy6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+        <div>
+          <a href="" class="footer-logo link"><span class="header-web">Web</span>Studio</a>
+          <address class="footer-address">
+            <ul class="list">
+              <li class="footer-item">
+                <a
+                  class="link footer-address"
+                  href="https://goo.gl/maps/mXZvtL3YNKknpCyy6"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@example.com" class="link footer-contact">info@example.com</a>
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380991111111" class="link footer-contact">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h3 class="secondary-title">присоединяйтесь</h3>
+          <ul class="list footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@example.com" class="link footer-contact">info@example.com</a>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="tel:+380991111111" class="link footer-contact">+38 099 111 11 11</a>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link link">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
