Корректирует ДЗ финал

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="list">
+          <ul class="list team-list">
             <li class="team-item">
               <img
                 src="./imeges/img_igor.jpg"
@@ -424,7 +424,7 @@
             <li class="footer-social-item">
               <a href="" class="footer-social-link link">
                 <svg class="footer-svg" width="20" height="20" >
-                  <use href="./imeges/icons.svg#icon-instagram">
+                  <use href="./imeges/icons.svg#icon-twitter">
                   </use>
                 </svg>
               </a>
@@ -432,7 +432,7 @@
             <li class="footer-social-item">
               <a href="" class="footer-social-link link">
                 <svg class="footer-svg" width="20" height="20" >
-                  <use href="./imeges/icons.svg#icon-instagram">
+                  <use href="./imeges/icons.svg#icon-facebook">
                   </use>
                 </svg>
               </a>
@@ -440,7 +440,7 @@
             <li class="footer-social-item">
               <a href="" class="footer-social-link link">
                 <svg class="footer-svg" width="20" height="20" >
-                  <use href="./imeges/icons.svg#icon-instagram">
+                  <use href="./imeges/icons.svg#icon-linkedin">
                   </use>
                 </svg>
               </a>
