--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 
     <main>
       <!-- FILTER BUTTONS -->
-      <section class="gallary">
+      <section class="gallery">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="list filter-list">
@@ -67,82 +67,82 @@
             <li class="filter-item"><button type="button" class="btn">Маркетинг</button></li>
           </ul>
           <ul class="list gallery-list">
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-0.jpg" alt="work1" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Технокряк</h2>
                   <p class="filter-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-1.jpg" alt="work2" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Постер New Orlean vs Golden Star</h2>
                   <p class="filter-text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-2.jpg" alt="work3" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Ресторан Seafood</h2>
                   <p class="filter-text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-3.jpg" alt="work4" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Проект Prime</h2>
                   <p class="filter-text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-4.jpg" alt="work5" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Проект Boxes</h2>
                   <p class="filter-text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-5.jpg" alt="work6" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Inspiration has no Borders</h2>
                   <p class="filter-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-6.jpg" alt="work7" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Издание Limited Edition</h2>
                   <p class="filter-text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-7.jpg" alt="work8" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Проект LAB</h2>
                   <p class="filter-text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="gallary-item">
-              <a href="" class="link">
+            <li class="gallery-item">
+              <a href="" class="link gallery-link">
                 <img src="./imeges/img-8.jpg" alt="work9" class="filter-img" width="370" />
-                <div class="gallary-text">
+                <div class="gallery-text">
                   <h2 class="filter-title">Growing Business</h2>
                   <p class="filter-text">Приложение</p>
                 </div>
@@ -189,21 +189,21 @@
             <li class="footer-social-item">
               <a href="" class="footer-social-link link">
                 <svg class="footer-svg" width="20" height="20">
-                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                  <use href="./imeges/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link link">
                 <svg class="footer-svg" width="20" height="20">
-                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                  <use href="./imeges/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link link">
                 <svg class="footer-svg" width="20" height="20">
-                  <use href="./imeges/icons.svg#icon-instagram"></use>
+                  <use href="./imeges/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
